@startuml

set namespaceSeparator ::

hide empty members
allow_mixing
'left to right direction

namespace  sql {

namespace entities {
class Size
class Type
class Name

class AttributeColumn  {
	isNull : boolean
	isUnique : boolean
}

class PrimaryKey

class PrimaryKeyColumn  {
	isAutoIncrement : boolean
	isUnique : boolean
}

class ForeignKeyColumn  {
	isUnique : boolean
}

class Table  {
	name: Name
}


class ForeignKey  {
	name: Name
}

class Database {
	name : Name
}

class Ip

class Host {
	name : Name
}

class Server {
	name : Name
}

class InsertsDefinitions 

class InsertDefinition {
	amountOfRows : uint16_t
}

enum AttributeColumnValuePattern {
	userInput
	random
	algorithmGenerated
	autoIncrement
	nullValue
	inferiorLimit
	superiorLimit 
}

enum PrimaryKeyColumnValuePattern {
	userInput
	algorithmGenerated
	autoIncrement	 
	inferiorLimit
	superiorLimit 
}

enum ForeignKeyColumnValueMatchPattern {
	userChoice
	random
	onePerOne
	oneForAll
}


enum SingleValuePattern {
	userInput
}

class Value {
	value : string
}

class ColumnHeader
note top: Only one of '*InsertDefinition'
class TestDefinition


TestDefinition *-- InsertsDefinitions



Table  *--o "0..*" AttributeColumn
Table  *--o "0..1" PrimaryKey 
Table  *--o "0..*" ForeignKey

PrimaryKey *--o "0..*" PrimaryKeyColumn 
PrimaryKey o--o "0..*" ForeignKeyColumn

ForeignKey  *--o "1..*" ForeignKeyColumn 

ForeignKeyColumn o-- "*" PrimaryKeyColumn 

Database *--o "*" Table
Host *--o "*" Server
Host *-- Ip
Server *--o "*" Database

Hosts *--o "*" Host

InsertsDefinitions *-- "*" InsertDefinition

InsertDefinition *-- "*" ColumnHeader
InsertDefinition o-- Table

AttributeColumnValueInsertDefinition *-- AttributeColumnValuePattern
AttributeColumnValueInsertDefinition o-- AttributeColumn 

PrimaryKeyColumnValueInsertDefinition *-- PrimaryKeyColumnValuePattern
PrimaryKeyColumnValueInsertDefinition o-- PrimaryKeyColumn

ForeignKeyColumnValueInsertDefinition *-- ForeignKeyColumnValueMatchPattern
ForeignKeyColumnValueInsertDefinition o-- ForeignKeyColumn

ColumnHeader *--o  "*" Value
ColumnHeader o-- "0..1" PrimaryKeyColumnValueInsertDefinition
ColumnHeader o-- "0..1" ForeignKeyColumnValueInsertDefinition
ColumnHeader o-- "0..*" AttributeColumnValueInsertDefinition


Value o-- "0..1" SingleValuePattern

namespace business {
class InsertGenerator

InsertGenerator o-- sql::entities::InsertsDefinitions
InsertGenerator o-- sql::entities::Hosts
}
}


@enduml